[metadata]
name = parse_bank_statements
version = attr: parse_bank_statements.__version__
author = Giovanni Tardini
author_email = giovannitardini@yahoo.de
description = Package to parse bank statements
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tardini/parse_bank_statements.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=2.6
install_requires = tabula_py

[options.packages.find]
where = .
